# rosauth_eth

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: makeblock_all.launch~
nodes/: README.txt~  authentication.py  authentication.py~
srv/: Authentication.srv
test/: ros_mac_authentication_test.cpp  ros_mac_authentication_test.cpp~  ros_mac_authentication_test_1.cpp  ros_mac_authentication_test_1.cpp~
